# boids_simulation

./: readme.md  readme.rm
flocking_v1/: CMakeLists.txt
flocking_v1/shaders/: box.vert  creature.frag  creature.vert
flocking_v1/src/: Creature.cpp  Creature.h  main.cpp
flocking_v2/shaders/: box.frag
flocking_v2/src/: Creature.cpp  Shader.h  main.cpp
flocking_v3/: CMakeLists.txt
flocking_v3/src/: Creature.cpp  Creature.h  main.cpp
flocking_v4/: CMakeLists.txt
flocking_v4/shaders/: box.frag  creature.frag  plane.frag  plane.vert  sphere.frag  transparent_box.frag
flocking_v4/src/: Collider.h  Creature.cpp  Creature.h  Shader.cpp  main.cpp
